responsive social network

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 					</aside>
 					<div class="name">
 						<h1>Luke Chesser</h1>
-						<p>Montreal, Quebec, Canada <a href="https://www.facebook.com/" target="_blank"><img
+						<p>Montreal, Quebec, Canada <span class="social-network><a href="https://www.facebook.com/" target="_blank"><img
 									class="share" src="img/icon/fb.png" /></a><a href="https://twitter.com/"
-								target="_blank"><img class="share" src="img/icon/twitter.png" /></a></p>
+								target="_blank"><img class="share" src="img/icon/twitter.png" /></a></span></p>
 					</div>
 				</div>
 				<div class="stats-links">
